--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ SIGNAL_API_URL="http://localhost:8080"
 OLLAMA_API_URL="http://host.docker.internal:11434"
 OLLAMA_MODEL="llama3.2"
 
+# Perplexity Configuration
+PERPLEXITY_API_KEY="pplx-your-api-key-here"
+
 # Database
 DB_PATH="/app/data/penny.db"
 
