--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "sqlmodel>=0.0.14",
     "ollama>=0.4.0",
+    "perplexityai>=0.27.0",
 ]
 
 [build-system]
