--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "sqlmodel>=0.0.14",
     "ollama>=0.4.0",
     "perplexityai>=0.27.0",
+    "duckduckgo-search>=7.0.0",
 ]
 
 [build-system]
