--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 SIGNAL_NUMBER="+1234567890"
 SIGNAL_API_URL="http://localhost:8080"
 
+# Discord Configuration
+DISCORD_CHANNEL_ID=
+DISCORD_BOT_TOKEN="your-bot-token-here"
+
 # Ollama Configuration
 OLLAMA_API_URL="http://host.docker.internal:11434"
 OLLAMA_MODEL="llama3.2"
