--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pydantic>=2.0.0",
     "sqlmodel>=0.0.14",
+    "discord.py>=2.6.4",
     "ollama>=0.4.0",
     "perplexityai>=0.27.0",
     "duckduckgo-search>=7.0.0",
